automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "### Writing our derivative functions\n",
     "\n",
-    "Let's start by writing a function called `find_term_derivative` that returns the derivative of a single term.  The function takes the derivative of one term represented as a tuple, say $(1, 3)$, and returns its derivative, also represented as a tuple.  For example, if the function is $f(x) = 2x^4$ so its derivative is $f'(x) = 2x^3$, then our function `find_term_derivative` should take an input of `(2, 4)` and return `(2, 3)`."
+    "Let's start by writing a function called `find_term_derivative` that returns the derivative of a single term.  The function takes the derivative of one term represented as a tuple, say $(1, 3)$, and returns its derivative, also represented as a tuple.  For example, if the function is $f(x) = 2x^4$ so its derivative is $f'(x) = 8x^3$, then our function `find_term_derivative` should take an input of `(2, 4)` and return `(8, 3)`."
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,19 +76,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    pass"
+    "    return (term[0]*term[1],term[1]-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_term_derivative(one_x_cubed) # (3, 2)"
    ]
@@ -102,9 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "two_x_squared = (2, 2)\n",
     "find_term_derivative(two_x_squared) # (4, 1)"
@@ -125,19 +147,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    pass"
+    "    return list(filter(lambda term: term[0] != 0, list(map(lambda term: find_term_derivative(term),function_terms))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(12, 2), (-3, 0)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]"
@@ -152,9 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
@@ -169,9 +213,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Feel free to use the output_at function in solving this\n",
     "\n",
@@ -183,14 +252,25 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    pass"
+    "    return output_at(find_derivative(terms),x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
     "derivative_at(three_x_squared_minus_eleven, 2) # 12"
@@ -211,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +310,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "8c29caf0-abbc-11e8-931f-0242ac11005b",
+         "x": [
+          -10,
+          -9,
+          -8,
+          -7,
+          -6,
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          289,
+          232,
+          181,
+          136,
+          97,
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37,
+          64,
+          97,
+          136,
+          181,
+          232
+         ]
+        },
+        {
+         "mode": "lines",
+         "type": "scatter",
+         "uid": "8c29ce88-abbc-11e8-931f-0242ac11005b",
+         "x": [
+          1,
+          5,
+          9
+         ],
+         "y": [
+          -56,
+          64,
+          184
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f945d9b0-36a3-432a-a86f-c4560f057557\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f945d9b0-36a3-432a-a86f-c4560f057557\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"8c588c64-abbc-11e8-931f-0242ac11005b\"}, {\"mode\": \"lines\", \"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"8c588f16-abbc-11e8-931f-0242ac11005b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f945d9b0-36a3-432a-a86f-c4560f057557\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f945d9b0-36a3-432a-a86f-c4560f057557\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232], \"type\": \"scatter\", \"uid\": \"8c588c64-abbc-11e8-931f-0242ac11005b\"}, {\"mode\": \"lines\", \"x\": [1, 5, 9], \"y\": [-56, 64, 184], \"type\": \"scatter\", \"uid\": \"8c588f16-abbc-11e8-931f-0242ac11005b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import plot\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -244,14 +420,27 @@
     "\n",
     "tangent_at_five_trace = tangent_line(three_x_squared_minus_eleven, 5, line_length = 4)\n",
     "three_x_squared_minus_eleven_trace = function_values_trace(three_x_squared_minus_eleven, list(range(-10, 10)))\n",
+    "tangent_at_five_trace['mode'] = 'lines'\n",
+    "three_x_squared_minus_eleven_trace['mode'] = 'lines'\n",
     "plot([three_x_squared_minus_eleven_trace, tangent_at_five_trace])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 5, 9], 'y': [-56, 64, 184], 'mode': 'lines'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tangent_at_five_trace "
    ]
@@ -267,9 +456,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
+       " 'y': [64, 37, 16, 1, -8, -11, -8, 1, 16, 37],\n",
+       " 'mode': 'line',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from calculus import function_values_trace\n",
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
@@ -291,17 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    pass"
+    "    derivative_terms = find_derivative(terms)\n",
+    "    return function_values_trace(derivative_terms, x_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,9 +515,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
+       " 'y': [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24],\n",
+       " 'mode': 'line',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_squared_minus_eleven_derivative_trace"
    ]
@@ -326,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,6 +559,8 @@
     "def side_by_side_derivative_rules(list_of_terms, x_values):\n",
     "    function_trace = function_values_trace(list_of_terms, x_values)\n",
     "    derivative_trace = derivative_function_trace(list_of_terms, x_values)\n",
+    "    function_trace['mode'] = 'lines'\n",
+    "    derivative_trace['mode'] = 'lines'\n",
     "    if derivative_trace and function_trace:\n",
     "        return make_subplots([function_trace], [derivative_trace])\n"
    ]
@@ -352,9 +574,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "2612edc2-abbd-11e8-931f-0242ac11005b",
+         "x": [
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4
+         ],
+         "xaxis": "x",
+         "y": [
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37
+         ],
+         "yaxis": "y"
+        },
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "2613ab7c-abbd-11e8-931f-0242ac11005b",
+         "x": [
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4
+         ],
+         "xaxis": "x2",
+         "y": [
+          -30,
+          -24,
+          -18,
+          -12,
+          -6,
+          0,
+          6,
+          12,
+          18,
+          24
+         ],
+         "yaxis": "y2"
+        }
+       ],
+       "layout": {
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          0.45
+         ]
+        },
+        "xaxis2": {
+         "anchor": "y2",
+         "domain": [
+          0.55,
+          1
+         ]
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ]
+        },
+        "yaxis2": {
+         "anchor": "x2",
+         "domain": [
+          0,
+          1
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"4af068f6-553e-47ed-a400-9aa0408d93ef\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            '4af068f6-553e-47ed-a400-9aa0408d93ef',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [64, 37, 16, 1, -8, -11, -8, 1, 16, 37], \"type\": \"scatter\", \"uid\": \"2612edc2-abbd-11e8-931f-0242ac11005b\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24], \"type\": \"scatter\", \"uid\": \"2613ab7c-abbd-11e8-931f-0242ac11005b\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('4af068f6-553e-47ed-a400-9aa0408d93ef',{});}).then(function(){Plotly.animate('4af068f6-553e-47ed-a400-9aa0408d93ef');})\n",
+       "        });</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"4af068f6-553e-47ed-a400-9aa0408d93ef\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            '4af068f6-553e-47ed-a400-9aa0408d93ef',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [64, 37, 16, 1, -8, -11, -8, 1, 16, 37], \"type\": \"scatter\", \"uid\": \"2612edc2-abbd-11e8-931f-0242ac11005b\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24], \"type\": \"scatter\", \"uid\": \"2613ab7c-abbd-11e8-931f-0242ac11005b\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('4af068f6-553e-47ed-a400-9aa0408d93ef',{});}).then(function(){Plotly.animate('4af068f6-553e-47ed-a400-9aa0408d93ef');})\n",
+       "        });</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import plot_figure\n",
     "side_by_side_three_x_squared_minus_eleven = side_by_side_derivative_rules(three_x_squared_minus_eleven, list(range(-5, 5)))\n",
